# template-rooms-pkg

./: .gitignore  .releaserc.json  CHANGELOG.md  README.md  __init__.py  pyproject.toml
.github/workflows/: linter.yml  release.yml
docs/: README.md
src/template_rooms_pkg/: __init__.py  addon.py
src/template_rooms_pkg/actions/: __init__.py  base.py  example.py
src/template_rooms_pkg/configuration/: __init__.py  addonconfig.py  baseconfig.py  example.py
src/template_rooms_pkg/configuration/examples/: api_config.py  database_config.py  llm_config.py
src/template_rooms_pkg/memory/: __init__.py  example.py
src/template_rooms_pkg/services/: __init__.py  example.py
src/template_rooms_pkg/tools/: __init__.py  example.py
src/template_rooms_pkg/utils/: __init__.py  example.py
tests/: test_configuration.py
