[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "template-rooms-pkg"
version = "1.0.2"
description = "Template rooms package for AI rooms script"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SYNVEX", email = "contact@synvex.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "loguru>=0.7.0",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "python -m build"
dist_path = "dist/"
upload_to_pypi = false
upload_to_release = false
remove_dist = true

[project.urls]
Homepage = "https://github.com/synvex/template-rooms-pkg"
Repository = "https://github.com/synvex/template-rooms-pkg"