[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "template-rooms-pkg"
version = "1.0.8"
description = "Template rooms package for AI rooms script"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SYNVEX", email = "contact@synvex.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "loguru>=0.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.semantic_release]
branch = "main"
upload_to_pypi = false
upload_to_release = true
version_toml = ["pyproject.toml:project.version"]
build_command = "python -m build"

[project.urls]
Homepage = "https://github.com/synvex/template-rooms-pkg"
Repository = "https://github.com/synvex/template-rooms-pkg"